web/skins/modern/resources/css/cat-user.css
/* ... */
span.edu_cat {
    font-weight: bold;
    color: var(--color2);
}

#welcome {
    padding: 20px;
    padding-left: 30px;
    text-align: justify;
    border-bottom-style:solid;
    border-bottom-width:5px;
    border-color: var(--color1);
    font-size: 14px;
    font-weight: normal;
}

#profiles {
    padding-left: 30px; 
    font-size: 14px; 
    padding-bottom: 10px 
}

#user_info {
    max-width: 100%;
    padding-left: 30px; 
    font-size: 14px;  
    line-height: 150%;
    font-weight: normal; 
}

span.user_info {
    overflow: hidden;
    padding-right:10px;
    display: inline-block;
    max-width:100%;
    text-overflow: ellipsis;
    white-space: nowrap;
}

span.user_info_header {
    font-weight: bold;
}

#loading_ico {
    display: none;
    position: absolute;
    left: 200px;
    top: 220px;
    z-index: 200;
    text-align: center;
}

#motd {
   position: absolute;
   top: 0px;
   height:36px;
   line-height:36px;
//   color: maroon;
   color: #ffff66;
   text-align: right;
   padding:0px;
   padding-right: 20px;
   width: 100%;
   background: var(--color3);
   box-sizing: border-box;
}

#footer {
    position: relative;
    min-height: 49px;
    width: 100%;
    background: white;
    margin: auto;
    padding-top:5px;
    padding-bottom:10px;
    border-top: 1px solid #000;
}

div.footer table {
    width: 100%;
}

div.footer table td {
    padding-right:20px; 
    padding-left:20px; 
    vertical-align:top;
    position: relative;
}

@media all and (max-width: 389px) {
#institution_name {
    font-size: 20px;
    padding-top: 20px;
    padding-bottom: 18px;
    padding-right: 100px;
    padding-left: 20px;
    background: var(--color3);
    color: white;
    text-align: left;
}

#top_invite {
    cursor: pointer;
    text-decoration: underline;
    text-decoration: underline;
    padding-bottom: 10px;
}

#top_invite:hover {
    text-decoration: underline;
}

#user_button_td {
    padding-top: 10px;
}


#slides span {
    position: absolute;
    left: 20px;
    z-index: 20;
}


#user_welcome {
    background: #ffffff;
    padding-left: 30px;
    padding-top: 20px;
    padding-right: 20px;
    font-size: 14px;
    font-weight: normal;
    display:none;
}

.download_button_text {
    width: 150px;
    position:absolute;
    font-size:20px;
    top:15px;
    right: 10px;
    padding-top:0px;
}

.download_button_text_1 {
    width: 170px;
    position:absolute;
    font-size:14px;
    top:20px;
    height: 30px;
    right: 5px;
    padding-top:0px;
    display: none;
}
button.guess_os {
   position: relative;
   height:auto;
   width: 250px;
   background-repeat:no-repeat;
   background-position: 10px 15px;
}

#profile_list {
    width: auto;
    max-width: 90%;
    padding-left: 10px;
    padding-right: 0px;
    background-color: var(--color3);
    color: white;
}

#devices {
    padding-left: auto;
    padding-right: auto;
}

#browser {
    width: 90%;
}

#img_roll {
   display: none;
}

#device_list button.more_info_b {
   display: none;
}

.device_list {
    list-style-type: none;
}

.device_list td {
    vertical-align:middle;
}


td.vendor {
    display: none;
}

#hamburger {
   position: absolute;
   right: 0px;
   top: 30px;
   width: 80px;
   cursor: pointer;
   z-index: 140;
}
#menu_top {
    position: absolute;
    left: 0px;
    top: 20px;
    padding-right: 2vw;
    z-index: 150;
    background: #e7e7e7;
}

#menu_top > ul {
    list-style-type: none;
    font-weight: bold;
    display: none;
}

#menu_top > ul li ul{
    font-weight: normal;
}

#idp_logo {
   max-width:20vw;
   padding-top:30px;
}

#fed_logo {
   max-width:20vw;
   padding-top:30px;
}

#inst_extra_text {
   position: absolute;
   max-width: 30vw;
   width: auto;
   top: 0px;
   right: 20px;
   font-size: 13px;
   padding-top: 14px;
   color: yellow;
   padding-left:0px;
   text-align: right;
}

}

@media all and (max-width: 389px) and (orientation:landscape) { 
#menu_top {
    font-size: 2.5vw;
    max-width: 60vw;
}

}

@media all and (max-width: 389px) and (orientation:portrait) { 
#menu_top {
    font-size: 2.5vh;
    max-width: 60vw;
}

#welcome_top1 {
    padding-top: 140px;
}

#roller {
    display: none;
}

}
/* ... */

